<resources>
    <string name="app_name">Pro-Tracker</string>
    <string name="record_every">Set Interval</string>
    <string name="default_time">15</string>
    <string name="minutes">Minutes</string>
    <string name="interval">15 minutes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">00:00:00</string>
    <string name="locations_recorded">Locations Recorded</string>
    <string name="zero">0</string>
    <string name="time_hand">H : M : S</string>
    <string name="M">M</string>
    <string name="S">S</string>
    <string name="H">H</string>
    <string name="action_back">back</string>
    <string name="action_history">History</string>
    <string name="action_done">done</string>
    <string name="button_description">Record Location Every</string>


    <string name="gothom_Light">fonts/Gotham-Light.ttf</string>
    <string name="gothom_Medium">fonts/Gotham-Medium.ttf</string>
    <string name="tracking">Tracking...</string>

</resources>
