<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:columnCount="3"
    android:rowCount="2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        android:id="@+id/duration"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/H"
        android:gravity="center"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/M"
        android:gravity="center"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/S"
        android:layout_column="2"
        android:layout_row="1"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1" />
</GridLayout>