<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:textColor="@color/interval_descriptor_color"
        android:text="@string/record_every"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="5">


        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:id="@+id/playButton" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/circular_bounds"
            android:layout_gravity="center"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:id="@+id/default_value"
                android:textSize="30sp"
                android:text="@string/default_time"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/default_value"
                android:textColor="@android:color/white"
                android:id="@+id/minutes"
                android:text="@string/minutes"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>