<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context="checkpoint.andela.com.productivitytracker.activities.TrackingActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:id="@+id/timer"
        android:layout_marginBottom="40dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:src="@drawable/time" />
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/time"
    android:textSize="50sp"
        android:padding="5dp"
    android:textColor="@android:color/white"
    android:id="@+id/duration" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:paddingRight="10dp"
            android:text="@string/H"
            android:gravity="center" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/M"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:textSize="12sp"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/S"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer"
        android:layout_centerHorizontal="true"
        android:id="@+id/progress_circle">

        <checkpoint.andela.com.productivitytracker.circleprogress.CircleProgressView
            android:id="@+id/circleView"
            android:layout_width="2200dp"
            android:layout_height="220dp"
            CircleProgressView:cpv_barColor="#d3fa35"
            CircleProgressView:cpv_barWidth="15dp"
            CircleProgressView:cpv_contourSize="0dp"
            CircleProgressView:cpv_autoTextSize="true"
            CircleProgressView:cpv_maxValue="100"
            CircleProgressView:cpv_rimColor="@android:color/transparent"
            CircleProgressView:cpv_rimWidth="5dp"
            CircleProgressView:cpv_seekMode="true"
            CircleProgressView:cpv_textColor="#00796B"
            CircleProgressView:cpv_unit="%"
            CircleProgressView:cpv_unitColor="#009688"/>

        <ImageButton
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:background="@drawable/pause_button_background"
            android:src="@drawable/pause"
            android:layout_gravity="center"
            android:id="@+id/pause_button" />

    </FrameLayout>
    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/action"
        android:layout_below="@+id/timer"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        layout="@layout/action" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locations_recorded"
            android:textColor="@android:color/white"
            android:background="@drawable/label_background_color"
            android:id="@+id/location_count_label"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_locations"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:background="@drawable/circular_label_background_color"
            android:textSize="60sp"
            android:layout_marginLeft="-20dp"
            android:text="@string/zero"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_gravity="center_vertical"
             />

    </LinearLayout>


</RelativeLayout>
